[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osquery_hunter"
version = "5.19.0"
description = "Windows process + network triage helper for security professionals."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ItsmeGSG" }]
dependencies = [
    "psutil>=5.9",
]

[project.urls]
Homepage = "https://github.com/ItsmeGSG/osquery_hunter"
Issues = "https://github.com/ItsmeGSG/osquery_hunter/issues"
